// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`withBackgroundImage withBackgroundImage, bgPosition should be omitted 1`] = `
<div
  style={
    {
      "backgroundSize": "contain",
    }
  }
>
  Should contain backgroundStyles
</div>
`;

exports[`withBackgroundImage withBackgroundImage, render bgSize and don't override other styles  1`] = `
<div
  style={
    {
      "backgroundSize": "contain",
      "color": "red",
    }
  }
>
  Should contain backgroundStyles
</div>
`;

exports[`withBackgroundImage withBackgroundImage, render with background-image and no-repeat 1`] = `
<div
  style={
    {
      "backgroundImage": "url(http://www.awesome.com/image.jpg)",
      "backgroundPosition": "center center",
      "backgroundRepeat": "no-repeat",
      "backgroundSize": "contain",
    }
  }
>
  Should contain backgroundStyles
</div>
`;
